# myshape-site

./: .cursorrules  .gitignore  .vercelignore  BENCHMARK.md  CLAUDE.md  GRANT_EF_ESP.md  GRANT_EF_MERGED.md  PROTOCOL_LOG.md  README.md  ecosystem.config.cjs  er.name Protocol_Raymomd  my-engine.mjs  next.config.js  next.config.ts  package-lock.json  package.json  sentry.edge.config.ts  sentry.server.config.ts  server.mjs  vitest.config.ts
.claude/: settings.json  settings.local.json
.github/: release-cps-0001-protocol-demo-v1.0.md
cli/: Cargo.toml
cli/src/: demo.rs  verify.rs
continuity-protocol/: BLIND_IMPLEMENTATION_CHALLENGE.md  BLIND_TEST_REPORT.md  DISCUSSION_POST.md  ENGINE_AUTHORING_GUIDE.md  IMPLEMENT.md  QUICKSTART.md  README.md  SOCIAL_TEMPLATES.md  START_HERE.md  WHY_CPS_DOES_NOT_VALIDATE_EVIDENCE.md  onboarding-test.mjs
datasets/: README.md  ee003_runs.csv  engine_summary.csv  tracker_comparison.csv
docs/: API-PATTERNS.md  CONVENTIONS.md  ERROR-HANDLING.md  Protocol-Spec.md  SECURITY.md  TESTING-STRATEGY.md  Unforgeability-Proof.md  challenge-protocol-formalization-v0.1.md  genesis-100-recruitment.md  genesis-governance.md  motion-signature-formalization-v0.1.md  multi-factor-verification-formalization-v0.1.md  presence-protocol-whitepaper-v0.1.md  substack-continuity-lab-launch.md  zk-presence-circuit-v0.1.md
engine/: Cargo.toml
engine/src/: lib.rs  types.rs
engine/src/challenge/: generator.rs  mod.rs
engine/src/motion/: dynamics.rs  kinematics.rs  mod.rs  signature.rs  spectral.rs
engine/src/verification/: mod.rs  scorer.rs
(+496 files in other folders)
